Finished Chapter 1 exercises

--- a/Chapter_1.ipynb
+++ b/Chapter_1.ipynb
@@ -1,23 +1,102 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0678e81-f275-4e51-9428-145601b19c1f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "",
-   "name": ""
+  "cells": [
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "id": "e0678e81-f275-4e51-9428-145601b19c1f",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e0678e81-f275-4e51-9428-145601b19c1f",
+        "outputId": "9bb288f3-6948-4776-fad7-8f9321edd00a"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python 3.11.11\n"
+          ]
+        }
+      ],
+      "source": [
+        "!python --version"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch"
+      ],
+      "metadata": {
+        "id": "SpD90UY3Vk3v"
+      },
+      "id": "SpD90UY3Vk3v",
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(torch.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a3-g-4N8WOPO",
+        "outputId": "c59a47c2-0c0c-4c00-9b0b-d5fb7eaa3359"
+      },
+      "id": "a3-g-4N8WOPO",
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5.1+cu124\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(torch.cuda.is_available())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jeHgMbySWlWK",
+        "outputId": "7895bc71-fba5-496e-a5ea-dec1455e492b"
+      },
+      "id": "jeHgMbySWlWK",
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "",
+      "name": ""
+    },
+    "language_info": {
+      "name": ""
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  "language_info": {
-   "name": ""
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
